--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
     </style>
-
+    <link rel="stylesheet" href="./css/zero_styles.css" />
     <script type="text/javascript">
       (function (l) {
         if (l.search[1] === "/") {
